HJR -  Fix spacing issue in term of uses display

--- a/ui/src/components/InfoPanel/InfoPanel.css
+++ b/ui/src/components/InfoPanel/InfoPanel.css
@@ -57,6 +57,9 @@
     padding: 0 20px;
     overflow: hidden;
     overflow-y: auto;
+    text-align: justify;
+    text-align-last: left;
+    line-height: 1.1;
 }
 
 .kgs-info__content code {
